--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-paginate": "^1.0.0",
     "express-session": "^1.16.2",
     "mongoose": "^5.6.8",
+    "mongoose-paginate-v2": "^1.3.0",
     "multer": "^1.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
