--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "node": "10.16.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.512.0",
     "bcrypt": "^3.0.6",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.0.0",
+    "connect-redis": "^3.4.2",
     "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
@@ -23,9 +26,11 @@
     "express-flash": "0.0.2",
     "express-paginate": "^1.0.0",
     "express-session": "^1.16.2",
+    "md5-file": "^4.0.0",
     "mongoose": "^5.6.8",
     "mongoose-paginate-v2": "^1.3.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
