--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-flash": "0.0.2",
     "express-paginate": "^1.0.0",
     "express-session": "^1.16.2",
+    "json2csv": "^4.5.2",
     "md5-file": "^4.0.0",
     "mongoose": "^5.6.8",
     "mongoose-paginate-v2": "^1.3.0",
